--- a/privacy.html
+++ b/privacy.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Payback</title>
+    <title>Privacy Policy – Payback Debt Tracker App</title>
+
     <meta
       name="description"
       content="Payback never collects your personal data. Everything stays on your device."
     />
+
+    <!-- Favicon -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/app-icon.png" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
@@ -29,9 +34,15 @@
       <div
         class="container mx-auto px-6 py-5 flex justify-between items-center"
       >
-        <a href="index.html" class="text-3xl font-bold text-purple-600"
-          >Payback</a
-        >
+        <a href="index.html" class="flex items-center space-x-3">
+          <img
+            src="images/app-icon.png"
+            alt="Payback App Icon"
+            class="h-9 w-9 rounded-xl shadow-md transition-transform hover:scale-105"
+          />
+          <span class="text-2xl font-bold text-purple-600">Payback</span>
+        </a>
+
         <ul class="flex space-x-10 text-gray-600 font-medium">
           <li>
             <a
@@ -73,18 +84,11 @@
             Information Collection and Use
           </h2>
           <p>
-            The Application collects information when you download and use it.
-            This information may include information such as
+            The Application does not collect personal data or track users across
+            apps or websites. Limited, anonymous technical information may be
+            processed by Apple’s App Store and operating system for download,
+            crash reporting, and system performance purposes.
           </p>
-          <ul class="list-disc pl-8 space-y-3 text-lg">
-            <li>Your device's Internet Protocol address (e.g. IP address)</li>
-            <li>
-              The pages of the Application that you visit, the time and date of
-              your visit, the time spent on those pages
-            </li>
-            <li>The time spent on the Application</li>
-            <li>The operating system you use on your mobile device</li>
-          </ul>
 
           <p>
             The Application does not gather precise information about the
@@ -92,9 +96,8 @@
           </p>
 
           <p>
-            The Service Provider may use the information you provided to contact
-            you from time to time to provide you with important information,
-            required notices and marketing promotions.
+            The Service Provider does not collect user contact information and
+            does not send marketing communications through the Application.
           </p>
 
           <p>
@@ -150,13 +153,10 @@
             application marketplace or network.
           </p>
 
-          <h2 class="text-2xl font-bold mt-12">Data Retention Policy</h2>
           <p class="text-lg">
-            The Service Provider will retain User Provided data for as long as
-            you use the Application and for a reasonable time thereafter. If
-            you'd like them to delete User Provided Data that you have provided
-            via the Application, please contact them using the support form and
-            they will respond in a reasonable time.
+            All data created in the Application is stored locally on your
+            device. The Service Provider does not have access to this data and
+            cannot retain, view, or delete it remotely.
           </p>
 
           <h2 class="text-2xl font-bold mt-12">Children</h2>
@@ -207,6 +207,13 @@
             amended by us.
           </p>
 
+          <p class="text-lg mt-12">
+            Learn more about how Payback works on the
+            <a href="index.html" class="underline hover:text-purple-600">
+              main app page </a
+            >.
+          </p>
+
           <p class="text-lg mt-12 italic">
             Thank you for trusting Payback with your private financial
             information. We take that responsibility seriously.
@@ -218,7 +225,15 @@
     <!-- Footer -->
     <footer class="bg-gray-900 text-gray-400 py-12">
       <div class="container mx-auto px-6 text-center">
-        <p class="text-2xl font-bold text-white mb-4">Payback</p>
+        <div class="flex items-center justify-center space-x-3 mb-4">
+          <img
+            src="images/app-icon.png"
+            alt="Payback App Icon"
+            class="h-8 w-8 rounded-lg shadow-md"
+          />
+          <span class="text-2xl font-bold text-white">Payback</span>
+        </div>
+
         <p class="mb-6">© 2025 Payback. All rights reserved.</p>
         <ul class="flex justify-center space-x-8">
           <li>
