--- a/support.html
+++ b/support.html
@@ -33,16 +33,18 @@
       <div
         class="container mx-auto px-6 py-5 flex justify-between items-center"
       >
-        <a href="index.html" class="flex items-center space-x-3">
+        <!-- Logo -->
+        <a href="/" class="flex items-center space-x-3">
           <img
             src="images/app-icon.png"
             alt="Payback App Icon"
-            class="h-9 w-9 rounded-xl shadow-md transition-transform hover:scale-105"
+            class="h-9 w-9 rounded-xl shadow-md"
           />
           <span class="text-2xl font-bold text-purple-600">Payback</span>
         </a>
 
-        <ul class="flex space-x-10 text-gray-600 font-medium">
+        <!-- Desktop Nav -->
+        <ul class="hidden md:flex space-x-10 text-gray-600 font-medium">
           <li>
             <a
               href="index.html#features"
@@ -56,7 +58,53 @@
             >
           </li>
           <li>
-            <a href="support.html" class="text-purple-600 font-bold">Support</a>
+            <a href="support.html" class="hover:text-purple-600 transition"
+              >Support</a
+            >
+          </li>
+        </ul>
+
+        <!-- Mobile Menu Button -->
+        <button
+          id="menuButton"
+          class="md:hidden focus:outline-none"
+          aria-label="Open menu"
+        >
+          <svg
+            class="w-8 h-8 text-purple-600"
+            fill="none"
+            stroke="currentColor"
+            viewBox="0 0 24 24"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            />
+          </svg>
+        </button>
+      </div>
+      <!-- Mobile Nav Menu -->
+      <div
+        id="mobileMenu"
+        class="hidden md:hidden bg-white border-t border-gray-200"
+      >
+        <ul class="flex flex-col px-6 py-6 space-y-6 text-gray-700 font-medium">
+          <li>
+            <a href="index.html#features" class="block hover:text-purple-600"
+              >Features</a
+            >
+          </li>
+          <li>
+            <a href="privacy.html" class="block hover:text-purple-600"
+              >Privacy</a
+            >
+          </li>
+          <li>
+            <a href="support.html" class="block hover:text-purple-600"
+              >Support</a
+            >
           </li>
         </ul>
       </div>
@@ -152,5 +200,13 @@
         </ul>
       </div>
     </footer>
+    <script>
+      const menuButton = document.getElementById('menuButton');
+      const mobileMenu = document.getElementById('mobileMenu');
+
+      menuButton.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+      });
+    </script>
   </body>
 </html>
