--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         document.documentElement.classList.remove('dark');
       }
     </script>
+    <script
+  src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+  data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
+></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
