--- a/support.html
+++ b/support.html
@@ -35,6 +35,10 @@
         document.documentElement.classList.remove('dark');
       }
     </script>
+    <script
+  src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+  data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
+></script>
 
     <style>
       body {
