Add analytics section detailing TelemetryDeck usage
Added information about the use of TelemetryDeck for analytics, emphasizing privacy and data anonymization.

--- a/privacy.html
+++ b/privacy.html
@@ -371,6 +371,22 @@
             delete the app, all your data is permanently gone.
           </p>
 
+          <h2 class="text-2xl font-bold mt-12">Analytics</h2>
+          <p class="text-lg">
+            We use TelemetryDeck, a privacy-first analytics service, to understand 
+            how Payback is used and improve the app experience. TelemetryDeck 
+            collects anonymous usage data such as which features are used and 
+            which widgets are popular.
+
+            No personally identifiable information is collected. We do not track:
+            - Debt amounts or payment details
+            - Contact names or information  
+            - Your location or personal data
+
+            All data is anonymized before leaving your device. For more information, 
+            see TelemetryDeck's privacy policy at https://telemetrydeck.com/privacy
+          </p>
+
           <h2 class="text-2xl font-bold mt-12">Third Party Access</h2>
           <p class="text-lg">
             Only aggregated, anonymized data is periodically transmitted to
