--- a/support.html
+++ b/support.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -36,9 +36,9 @@
       }
     </script>
     <script
-  src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
-  data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
-></script>
+      src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+      data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
+    ></script>
 
     <style>
       body {
