--- a/privacy.html
+++ b/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -37,9 +37,9 @@
       }
     </script>
     <script
-  src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
-  data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
-></script>
+      src="https://cdn.telemetrydeck.com/websdk/telemetrydeck.min.js"
+      data-app-id="<3217D842-BB77-48CD-89C8-7FB1ACD9F5BB>"
+    ></script>
 
     <style>
       body {
@@ -49,7 +49,9 @@
         scroll-behavior: smooth;
       }
       .feature-img {
-        transition: transform 0.4s ease, box-shadow 0.4s ease;
+        transition:
+          transform 0.4s ease,
+          box-shadow 0.4s ease;
         box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
       }
       .feature-img:hover {
@@ -66,8 +68,10 @@
         transform: translateY(0);
       }
       .glow-effect {
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.5),
-          0 0 40px rgba(255, 255, 255, 0.4), 0 0 80px rgba(255, 255, 255, 0.25),
+        box-shadow:
+          0 0 20px rgba(255, 255, 255, 0.5),
+          0 0 40px rgba(255, 255, 255, 0.4),
+          0 0 80px rgba(255, 255, 255, 0.25),
           0 20px 40px rgba(0, 0, 0, 0.3);
       }
       .swiper-button-prev,
@@ -330,153 +334,123 @@
         </h1>
 
         <div class="prose prose-lg max-w-none text-gray-700 space-y-8">
-          <p class="text-xl leading-relaxed">Last updated: December 2025</p>
+          <p class="text-xl leading-relaxed">Last updated: January 2026</p>
 
-          <p>
-            This privacy policy applies to the Payback - Debt Tracker app
-            (hereby referred to as "Application") for mobile devices that was
-            created by Joshua Crellin (hereby referred to as "Service Provider")
-            as a Freemium service. This service is intended for use "AS IS".
-          </p>
-
-          <p>
-            The Application does not collect personal data or track users across
-            apps or websites. Limited, anonymous technical information may be
-            processed by Apple’s App Store and operating system for download,
-            crash reporting, and system performance purposes.
-          </p>
-
-          <p>
-            The Application does not gather precise information about the
-            location of your mobile device.
-          </p>
-
-          <p>
-            The Service Provider does not collect user contact information and
-            does not send marketing communications through the Application.
-          </p>
-
-          <p>
-            For a better experience, while using the Application, the Service
-            Provider may require you to provide us with certain personally
-            identifiable information. The information that the Service Provider
-            request will be retained by them and used as described in this
-            privacy policy.
-          </p>
-
-          <h2 class="text-2xl font-bold mt-12">Where your data lives</h2>
           <p class="text-lg">
-            100% of your data is stored locally on your iPhone using standard
-            iOS secure storage. Nothing is uploaded, synced, or shared. If you
-            delete the app, all your data is permanently gone.
+            This Privacy Policy applies to the
+            <strong><em>Payback – Debt Tracker</em></strong> mobile application
+            ("Application"), developed by Joshua Crellin ("Service Provider")
+            and provided as a Freemium service. The Application is provided “AS
+            IS”.
+          </p>
+
+          <h2 class="text-2xl font-bold mt-12">Data Collection and Use</h2>
+          <p class="text-lg">
+            The Application does <strong>not</strong> require users to create
+            accounts or provide any personally identifiable information to
+            function.
+          </p>
+          <p class="text-lg">
+            All financial data entered into the Application is stored
+            <strong>locally on your device only</strong>, using standard iOS
+            secure storage. No personal data is uploaded, synced, or shared with
+            the Service Provider or any external servers.
+          </p>
+          <p class="text-lg">
+            If you delete the Application, all locally stored data is
+            permanently removed.
           </p>
 
           <h2 class="text-2xl font-bold mt-12">Analytics</h2>
           <p class="text-lg">
-            We use TelemetryDeck, a privacy-first analytics service, to understand 
-            how Payback is used and improve the app experience. TelemetryDeck 
-            collects anonymous usage data such as which features are used and 
-            which widgets are popular.
-
-            No personally identifiable information is collected. We do not track:
-            - Debt amounts or payment details
-            - Contact names or information  
-            - Your location or personal data
-
-            All data is anonymized before leaving your device. For more information, 
-            see TelemetryDeck's privacy policy at https://telemetrydeck.com/privacy
+            The Application uses <strong>TelemetryDeck</strong>, a privacy-first
+            analytics service, to understand how features are used and to
+            improve the app experience.
           </p>
-
-          <h2 class="text-2xl font-bold mt-12">Third Party Access</h2>
           <p class="text-lg">
-            Only aggregated, anonymized data is periodically transmitted to
-            external services to aid the Service Provider in improving the
-            Application and their service. The Service Provider may share your
-            information with third parties in the ways that are described in
-            this privacy statement.
+            TelemetryDeck collects
+            <strong>anonymous, aggregated usage data</strong> such as:
           </p>
-          <p>
-            The Service Provider may disclose User Provided and Automatically
-            Collected Information:
-          </p>
-          <ul class="list-disc pl-8 space-y-3 text-lg">
-            <li>
-              as required by law, such as to comply with a subpoena, or similar
-              legal process;
-            </li>
-            <li>
-              when they believe in good faith that disclosure is necessary to
-              protect their rights, protect your safety or the safety of others,
-              investigate fraud, or respond to a government request;
-            </li>
-            <li>
-              with their trusted services providers who work on their behalf, do
-              not have an independent use of the information we disclose to
-              them, and have agreed to adhere to the rules set forth in this
-              privacy statement.
-            </li>
+          <ul class="text-lg">
+            <li>Feature usage</li>
+            <li>Screen interactions</li>
+            <li>Widget usage</li>
           </ul>
-
-          <h2 class="text-2xl font-bold mt-12">Opt-Out Rights</h2>
           <p class="text-lg">
-            You can stop all collection of information by the Application easily
-            by uninstalling it. You may use the standard uninstall processes as
-            may be available as part of your mobile device or via the mobile
-            application marketplace or network.
+            The Application does <strong>not</strong> collect or transmit:
           </p>
-
+          <ul class="text-lg">
+            <li>Debt amounts or payment details</li>
+            <li>Contact names or contact information</li>
+            <li>Personal identifiers</li>
+            <li>Precise location data</li>
+          </ul>
           <p class="text-lg">
-            All data created in the Application is stored locally on your
-            device. The Service Provider does not have access to this data and
-            cannot retain, view, or delete it remotely.
-          </p>
-
-          <h2 class="text-2xl font-bold mt-12">Children</h2>
-          <p class="text-lg">
-            The Service Provider does not use the Application to knowingly
-            solicit data from or market to children under the age of 13.
+            All analytics data is anonymized before leaving your device and
+            cannot be used to identify individual users. Anonymous analytics
+            data may be retained by TelemetryDeck for statistical analysis and
+            service improvement purposes.
           </p>
           <p class="text-lg">
-            The Service Provider does not knowingly collect personally
-            identifiable information from children. The Service Provider
-            encourages all children to never submit any personally identifiable
-            information through the Application and/or Services. The Service
-            Provider encourage parents and legal guardians to monitor their
-            children's Internet usage and to help enforce this Policy by
-            instructing their children never to provide personally identifiable
-            information through the Application and/or Services without their
-            permission. If you have reason to believe that a child has provided
-            personally identifiable information to the Service Provider through
-            the Application and/or Services, please contact the Service Provider
-            so that they will be able to take the necessary actions. You must
-            also be at least 16 years of age to consent to the processing of
-            your personally identifiable information in your country (in some
-            countries we may allow your parent or guardian to do so on your
-            behalf).
+            For more information, please see TelemetryDeck’s Privacy Policy:
+            <a
+              href="https://telemetrydeck.com/privacy"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              https://telemetrydeck.com/privacy</a
+            >
+          </p>
+
+          <h2 class="text-2xl font-bold mt-12">Third-Party Services</h2>
+          <p class="text-lg">
+            The only third-party service used by the Application is
+            TelemetryDeck, which processes anonymized analytics data on behalf
+            of the Service Provider.
+          </p>
+          <p class="text-lg">
+            Aggregated, anonymized data may be disclosed if required by law, to
+            comply with legal obligations, or to protect the rights and safety
+            of users or others.
+          </p>
+
+          <h2 class="text-2xl font-bold mt-12">Opt-Out</h2>
+          <p class="text-lg">
+            You may stop all analytics data collection by uninstalling the
+            Application. Since all app data is stored locally, the Service
+            Provider has no ability to access, retrieve, or delete user data
+            remotely.
+          </p>
+
+          <h2 class="text-2xl font-bold mt-12">Children’s Privacy</h2>
+          <p class="text-lg">
+            The Application is suitable for general audiences and may be used by
+            children. The Service Provider does not knowingly collect any
+            personally identifiable information from children under the age of
+            13. The Application does not include user accounts, social features,
+            or data submission mechanisms that would allow the collection of
+            personal information from children.
           </p>
 
           <h2 class="text-2xl font-bold mt-12">Security</h2>
           <p class="text-lg">
-            The Service Provider is concerned about safeguarding the
-            confidentiality of your information. The Service Provider provides
-            physical, electronic, and procedural safeguards to protect
-            information the Service Provider processes and maintains.
+            The Service Provider takes reasonable measures to safeguard the
+            information processed by the Application using appropriate physical,
+            electronic, and procedural protections. Because all user data
+            remains on the device, data exposure risks are minimized.
           </p>
 
-          <h2 class="text-2xl font-bold mt-12">Changes</h2>
+          <h2 class="text-2xl font-bold mt-12">Changes to This Policy</h2>
           <p class="text-lg">
-            This Privacy Policy may be updated from time to time for any reason.
-            The Service Provider will notify you of any changes to the Privacy
-            Policy by updating this page with the new Privacy Policy. You are
-            advised to consult this Privacy Policy regularly for any changes, as
-            continued use is deemed approval of all changes.
+            This Privacy Policy may be updated from time to time. Any changes
+            will be reflected on this page by updating the “Last updated” date.
+            Continued use of the Application constitutes acceptance of the
+            updated policy.
           </p>
 
-          <h2 class="text-2xl font-bold mt-12">Your Consent</h2>
+          <h2 class="text-2xl font-bold mt-12">Consent</h2>
           <p class="text-lg">
-            By using the Application, you are consenting to the processing of
-            your information as set forth in this Privacy Policy now and as
-            amended by us.
+            By using the Application, you consent to this Privacy Policy.
           </p>
 
           <p class="text-lg mt-12">
