--- a/privacy.html
+++ b/privacy.html
@@ -361,7 +361,7 @@
             permanently removed.
           </p>
 
-          <h2 class="text-2xl font-bold mt-12">Analytics</h2>
+          <!-- <h2 class="text-2xl font-bold mt-12">Analytics</h2>
           <p class="text-lg">
             The Application uses <strong>TelemetryDeck</strong>, a privacy-first
             analytics service, to understand how features are used and to
@@ -420,7 +420,7 @@
             Application. Since all app data is stored locally, the Service
             Provider has no ability to access, retrieve, or delete user data
             remotely.
-          </p>
+          </p> -->
 
           <h2 class="text-2xl font-bold mt-12">Children’s Privacy</h2>
           <p class="text-lg">
