--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           />
         </a>
         <p class="mt-6 text-white/90 text-lg font-medium">
-          Available on iPhone · Requires iOS 17.2 or later
+          Available on iPhone and iPad · Requires iOS 17.2 or later
         </p>
       </div>
     </section>
@@ -467,7 +467,7 @@
           </div>
         </div>
         <p class="text-center mt-12 text-xl text-gray-600">
-          Free version is powerful — Premium unlocks exports, stats, live rates,
+          Free version is powerful — Plus unlocks exports, stats, live rates,
           photos, interest, and more.
         </p>
       </div>
@@ -476,7 +476,7 @@
     <!-- Free vs Premium Comparison -->
     <section class="py-16 bg-gray-50">
       <div class="container mx-auto px-6 max-w-4xl">
-        <h3 class="text-3xl font-bold text-center mb-8">Free vs Premium</h3>
+        <h3 class="text-3xl font-bold text-center mb-8">Free vs Plus</h3>
         <div class="overflow-x-auto">
           <table
             class="w-full text-left border-collapse bg-white rounded-xl shadow-lg overflow-hidden"
@@ -486,7 +486,7 @@
                 <th class="p-5 font-semibold">Feature</th>
                 <th class="p-5 text-center font-semibold">Free</th>
                 <th class="p-5 text-center font-semibold bg-purple-200">
-                  Premium
+                  Plus
                 </th>
               </tr>
             </thead>
@@ -507,7 +507,7 @@
                 <td class="p-5 text-center text-green-600 font-bold">✓</td>
               </tr>
               <tr class="border-t bg-gray-50">
-                <td class="p-5">Live exchange rates</td>
+                <td class="p-5">Fetch current exchange rates</td>
                 <td class="p-5 text-center text-gray-400">✗</td>
                 <td class="p-5 text-center text-green-600 font-bold">✓</td>
               </tr>
@@ -522,7 +522,7 @@
                 <td class="p-5 text-center text-green-600 font-bold">✓</td>
               </tr>
               <tr class="border-t">
-                <td class="p-5">Due dates & custom reminders</td>
+                <td class="p-5">Due dates & smart reminders</td>
                 <td class="p-5 text-center text-gray-400">✗</td>
                 <td class="p-5 text-center text-green-600 font-bold">✓</td>
               </tr>
@@ -543,6 +543,21 @@
               </tr>
               <tr class="border-t">
                 <td class="p-5">Custom categories</td>
+                <td class="p-5 text-center text-gray-400">✗</td>
+                <td class="p-5 text-center text-green-600 font-bold">✓</td>
+              </tr>
+              <tr class="border-t">
+                <td class="p-5">Recurring debts</td>
+                <td class="p-5 text-center text-gray-400">✗</td>
+                <td class="p-5 text-center text-green-600 font-bold">✓</td>
+              </tr>
+              <tr class="border-t">
+                <td class="p-5">Contacts integration</td>
+                <td class="p-5 text-center text-gray-400">✗</td>
+                <td class="p-5 text-center text-green-600 font-bold">✓</td>
+              </tr>
+              <tr class="border-t">
+                <td class="p-5">Request payments</td>
                 <td class="p-5 text-center text-gray-400">✗</td>
                 <td class="p-5 text-center text-green-600 font-bold">✓</td>
               </tr>
@@ -619,13 +634,14 @@
               <!-- Slide 4 -->
               <div class="swiper-slide px-4">
                 <div class="text-center">
-                  <h3 class="text-3xl font-bold mb-4">Multiple currencies</h3>
+                  <h3 class="text-3xl font-bold mb-4">Payment methods</h3>
                   <p class="text-lg text-gray-600 mb-6">
-                    90+ currencies supported - more always being added.
+                    Request payments from people you know using your preferred
+                    payment method.
                   </p>
                   <img
-                    src="images/screenshot-4-currencies.png"
-                    alt="Currency selection"
+                    src="images/screenshot-4-payment-methods.png"
+                    alt="Payment methods"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl"
                     loading="lazy"
                   />
@@ -634,16 +650,14 @@
               <!-- Slide 5 -->
               <div class="swiper-slide px-4">
                 <div class="text-center">
-                  <h3 class="text-3xl font-bold mb-4">
-                    Organise with categories
-                  </h3>
+                  <h3 class="text-3xl font-bold mb-4">Never miss a due date</h3>
                   <p class="text-lg text-gray-600 mb-6">
-                    Filter and label debts for easy tracking — custom options in
-                    Premium.
+                    Set reminders and custom times — stay on top of every
+                    payment with smart reminders.
                   </p>
                   <img
-                    src="images/screenshot-5-categories.png"
-                    alt="Category filter"
+                    src="images/screenshot-5-due-date.png"
+                    alt="Smart reminders"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl"
                     loading="lazy"
                   />
@@ -652,28 +666,12 @@
               <!-- Slide 6 -->
               <div class="swiper-slide px-4">
                 <div class="text-center">
-                  <h3 class="text-3xl font-bold mb-4">Never miss a due date</h3>
-                  <p class="text-lg text-gray-600 mb-6">
-                    Set reminders and custom times — stay on top of every
-                    payment.
-                  </p>
-                  <img
-                    src="images/screenshot-6-due-date.png"
-                    alt="Due date and reminders"
-                    class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl"
-                    loading="lazy"
-                  />
-                </div>
-              </div>
-              <!-- Slide 7 -->
-              <div class="swiper-slide px-4">
-                <div class="text-center">
                   <h3 class="text-3xl font-bold mb-4">Payment history</h3>
                   <p class="text-lg text-gray-600 mb-6">
                     See every payment, date, and note — full transparency.
                   </p>
                   <img
-                    src="images/screenshot-7-history.png"
+                    src="images/screenshot-6-history.png"
                     alt="Payment history"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl"
                     loading="lazy"
@@ -771,18 +769,19 @@
               <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="order-2 md:order-1">
                   <img
-                    src="images/screenshot-4-currencies.png"
-                    alt="Currency selection"
+                    src="images/screenshot-4-payment-methods.png"
+                    alt="Payment methods"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl feature-img"
                     loading="lazy"
                   />
                 </div>
                 <div class="order-1 md:order-2 text-center md:text-left">
                   <h2 class="text-4xl md:text-5xl font-bold mb-6">
-                    Multiple currencies
+                    Payment methods
                   </h2>
                   <p class="text-xl text-gray-600 leading-relaxed">
-                    90+ currencies supported - more always being added.
+                    Request payments from people you know using your preferred
+                    payment method.
                   </p>
                 </div>
               </div>
@@ -795,17 +794,17 @@
               <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="order-2 md:order-1 text-center md:text-left">
                   <h2 class="text-4xl md:text-5xl font-bold mb-6">
-                    Organise with categories
+                    Never miss a due date
                   </h2>
                   <p class="text-xl text-gray-600 leading-relaxed">
-                    Filter and label debts for easy tracking — custom options in
-                    Premium.
+                    Set reminders and custom times — stay on top of every
+                    payment with smart reminders.
                   </p>
                 </div>
                 <div class="order-1 md:order-2">
                   <img
-                    src="images/screenshot-5-categories.png"
-                    alt="Category filter"
+                    src="images/screenshot-5-due-date.png"
+                    alt="Smart reminders"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl feature-img"
                     loading="lazy"
                   />
@@ -820,44 +819,19 @@
               <div class="grid md:grid-cols-2 gap-16 items-center">
                 <div class="order-2 md:order-1">
                   <img
-                    src="images/screenshot-6-due-date.png"
-                    alt="Due date and reminders"
+                    src="images/screenshot-6-history.png"
+                    alt="History"
                     class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl feature-img"
                     loading="lazy"
                   />
                 </div>
                 <div class="order-1 md:order-2 text-center md:text-left">
                   <h2 class="text-4xl md:text-5xl font-bold mb-6">
-                    Never miss a due date
-                  </h2>
-                  <p class="text-xl text-gray-600 leading-relaxed">
-                    Set reminders and custom times — stay on top of every
-                    payment.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Feature 7 - Image RIGHT (text left) -->
-          <div class="py-20">
-            <div class="container mx-auto px-6 max-w-6xl">
-              <div class="grid md:grid-cols-2 gap-16 items-center">
-                <div class="order-2 md:order-1 text-center md:text-left">
-                  <h2 class="text-4xl md:text-5xl font-bold mb-6">
                     Payment history
                   </h2>
                   <p class="text-xl text-gray-600 leading-relaxed">
                     See every payment, date, and note — full transparency.
                   </p>
-                </div>
-                <div class="order-1 md:order-2">
-                  <img
-                    src="images/screenshot-7-history.png"
-                    alt="Payment history"
-                    class="w-full max-w-lg mx-auto rounded-3xl shadow-2xl feature-img"
-                    loading="lazy"
-                  />
                 </div>
               </div>
             </div>
@@ -875,8 +849,8 @@
           Take Control of Your Debts Today
         </h2>
         <p class="text-xl mb-12 opacity-90">
-          Simple, private, and powerful. Free version is unlimited — Premium
-          takes it further.
+          Simple, private, and powerful. Free version is unlimited — Plus takes
+          it further.
         </p>
         <a
           href="https://apps.apple.com/app/payback-debt-tracker/id6756201066"
@@ -890,7 +864,7 @@
           />
         </a>
         <p class="mt-6 text-white/90 text-lg font-medium">
-          Available on iPhone · Requires iOS 17.2 or later
+          Available on iPhone and iPad · Requires iOS 17.2 or later
         </p>
       </div>
     </section>
